[package]
name = "riscy"
edition = "2021"
publish = false
license = "AGPL-3.0-or-later"

[dependencies]
bincode = { version = "1.3" }
borsh = { version = "1.5" }
cxx = { version = "1.0" }
risc0-ethereum-contracts = { path = "../risc0-ethereum/contracts" }
risc0-zkvm = { path = "../risc0/risc0/zkvm", features = ["prove"] }

[patch.crates-io]
risc0-zkvm = { path = "../risc0/risc0/zkvm" }

[patch."git+https://github.com/risc0/risc0"]
risc0-zkvm = { path = "../risc0/risc0/zkvm" }

[lib]
path = "riscy.rs"
crate-type = ["staticlib"]
